--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
         }
 
         .timestamp {
-            font-size: 1.4em; /* Made same as message content and larger */
+            font-size: 1.6em; /* Increased by 1 more size */
             color: rgba(255, 255, 255, 0.6);
             text-align: center;
         }
@@ -83,7 +83,7 @@
         .message-content {
             line-height: 1.8;
             text-align: center;
-            font-size: 1.4em; /* Increased by 2 more font sizes */
+            font-size: 1.6em; /* Increased by 1 more size */
         }
 
         .message-line {
@@ -92,7 +92,7 @@
 
         .scan-finished-time {
             margin-top: 10px;
-            font-size: 1.4em; /* Made same as message content and larger */
+            font-size: 1.6em; /* Increased by 1 more size */
             color: rgba(255, 255, 255, 0.6);
             text-align: center;
         }
@@ -118,10 +118,10 @@
         }
 
         .reload-button {
-            width: 100%;
-            max-width: 600px;
+            width: 110%; /* 10% wider */
+            max-width: 660px; /* 10% wider max-width */
             margin: 20px auto;
-            padding: 15px 20px;
+            padding: 16.5px 22px; /* 10% more padding (height) */
             background: linear-gradient(135deg, #4CAF50, #45a049);
             color: white;
             border: none;
